# contelli

./: .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  main_api.py  main_bot.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: audit.py  dependencies.py  router.py  schemas.py
bot/: __init__.py  api_client.py  charts.py  handlers.py
config/: __init__.py  logging.py  settings.py
database/: __init__.py  models.py  session.py
docker/: app.Dockerfile  bot.Dockerfile
services/: __init__.py  gemini_service.py  ml_service.py  scraper.py
tests/: conftest.py  test_api.py  test_bot.py  test_config.py  test_gemini_service.py  test_ml_service.py  test_schemas.py  test_scraper.py
