[project]
name = "contelli"
version = "1.0.0"
description = "Async platform for AI-based analysis and virality prediction of Telegram/YouTube content."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "ASYNC", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003", "B008"]

[tool.ruff.lint.per-file-ignores]
"main_api.py" = ["E402"]
"main_bot.py" = ["E402"]
"bot/charts.py" = ["E402"]
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = ["\\.venv", "docs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
